# channelflow

./: CMakeLists.txt  INSTALL.md  README.md  compiling_other_software.md  config.h.in
cfbasics/: arglist.h
channelflow/: CMakeLists.txt  cfdsi.cpp  cfmpi.h  config.h.cmake  dns.cpp  dnsflags.cpp  dnsflags.h  flowfield.cpp  flowfield.h  nse.cpp  nse.h  utilfuncs.cpp
cmake/: compiler_helper.cmake
cmake/Modules/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
examples/: couette.cpp
instructions/: running_simulations.md
programs/: simulateflow.cpp
python-wrapper/: CMakeLists.txt  cfwrapper.cpp
share/qa/: build_test.sh  unit_and_integration_test.sh
tests/: findsolnTest.cpp  laminarTest.cpp
tools/: benchmark.cpp  fieldconvert.cpp  fieldprops.cpp
